# com-rs-example

./: Cargo.toml
client/: Cargo.toml
client/src/: main.rs
interfaces/: Cargo.toml
interfaces/src/: ianimal.rs  lib.rs
server/: Cargo.toml
src/: comptr.rs  iclassfactory.rs  iunknown.rs  lib.rs
