[package]
name = "interfaces"
version = "0.1.0"
authors = ["adrianwithah <lim.weiheng.hadrian@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
com = { path=".." }
winapi = { version = "0.3", features = ["winuser", "combaseapi"] }
